--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -2,9 +2,11 @@
 <html lang="pt-br">
 	<head>
 		<meta charset="UTF-8"/>
-		<title>Copia e cola</title>
-	</head>
+		<title>Copia e cola</title>		
 		
+		<script type="text/javascript" src="http://code.jquery.com/jquery-2.1.3.js"></script>
+		<script type="text/javascript" src="script.js"></script>
+	</head>		
 	<body>
 	
 		<h2>Copia e cola</h2>
