Criação da função cloneBotao.

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -13,7 +13,11 @@
 		
 		<textarea id="entradaTexto" rows="8" cols="40"></textarea>
 		
-		<input type="button" id="botaoCopiar" value="Copiar"/>
+		<input type="button" id="botaoClone" value="Clone"/>
+		
+		<div id="divBotaoCopiar">
+			<input type="button" id="botaoCopiar" value="Copiar"/>
+		</div>
 		
 		<div id="saidaTexto"></div>
 	</body>
