--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -4,6 +4,7 @@
 		<meta charset="UTF-8"/>
 		<title>Copia e cola</title>		
 		
+		<link rel="stylesheet" type="text/css" href="estilo.css"/>
 		<script type="text/javascript" src="http://code.jquery.com/jquery-2.1.3.js"></script>
 		<script type="text/javascript" src="script.js"></script>
 	</head>		
